<resources>
    <string name="app_name">sudos cool phone directory</string>
    <string name="welcome_text">Welcome to the sudo android directory</string>
    <string name="rom_button">Android Devices</string>
    <string name="rom_frontpage_devces_text">Devices</string>
    <string name="rom_frontpage_intro_text">Choose a Manufacturer:</string>
    <string name="copyright">2017-2018 sudoxd.</string>
    <string name="specs">Specifications</string>
    <string name="title_activity_onem7">onem7</string>
    <string name="onem7name">HTC One M7</string>
    <string name="onem8name">HTC One M8</string>
    <string name="htcpixelname">Google Pixel</string>
    <string name="tenname">HTC 10</string>
    <string name="onem7rompagetitle">Custom ROMs for HTC One M7</string>
    <string name="onem8rompagetitle">Custom ROMs for HTC One M8</string>
    <string name="htctenpagetitle">Custom ROMs for HTC 10</string>
    <string name="motog5ppagetitle">Custom ROMs for Moto G5 Plus</string>
    <string name="pixelrompagetitle">Custom ROMs for Google Pixel</string>
    <string name="websitelinkbutton">sudoxd website</string>
    <string name="htcmain_frontpage_intro_text">Choose a Series:</string>
    <string name="htcone_frontpage_intro_text">HTC One Series</string>
    <string name="pixelseries_frontpage_intro_text">Pixel Series</string>
    <string name="htconem7ll_frontpage_intro_text">HTC One M7 Lollipop ROMs</string>
    <string name="htconem7mm_frontpage_intro_text">HTC One M7 Marshmallow ROMs</string>
    <string name="htconem7oreo_frontpage_intro_text">HTC One M7 Oreo ROMs</string>
    <string name="htconem7nougat_frontpage_intro_text">HTC One M7 Nougat ROMs</string>
    <string name="htconem8ll_frontpage_intro_text">HTC One M8 Lollipop ROMs</string>
    <string name="htconem8mm_frontpage_intro_text">HTC One M8 Marshmallow ROMs</string>
    <string name="htconem8mmse_frontpage_intro_text">HTC One M8 MM Sense ROMs</string>
    <string name="htconem8noug_frontpage_intro_text">HTC One M8 Nougat ROMs</string>
    <string name="htc10noug_frontpage_intro_text">HTC 10 Nougat ROMs</string>
    <string name="htconem8oreo_frontpage_intro_text">HTC One M8 Oreo ROMs</string>
    <string name="pixelnougat_frontpage_intro_text">Google Pixel Nougat ROMs</string>
    <string name="pixeloreo_frontpage_intro_text">Google Pixel Oreo ROMs</string>
    <string name="htconem7ll_gpeplus">GPE+ and GPE</string>
    <string name="rr">Resurrection Remix</string>
    <string name="xenonhd">XenonHD</string>
    <string name="AICP">AICP</string>
    <string name="TeslaOS">TeslaOS</string>
    <string name="Androidrevolution">Android Revolution</string>
    <string name="miui8">MIUI 8</string>
    <string name="skydragongpe">SkyDragon GPE</string>
    <string name="wolla">WOLLA</string>
    <string name="viperone">ViperOne</string>
    <string name="slim7">Slim7</string>
    <string name="lineage">LineageOS</string>
    <string name="exlineage">eXtended LineageOS</string>
    <string name="crdroid">crDroid</string>
    <string name="purenexus">PureNexus</string>
    <string name="aospextended">AOSP Extended</string>
    <string name="devices_label_short">Devices</string>
    <string name="devices_label_long">Devices</string>
    <string name="motogseries">Moto G Series</string>
    <string name="title_activity_samsungsseries">samsungsseries</string>
    <string name="versionname">$versionName</string>
    <string name="title_activity_tabletmain">tabletmain</string>
</resources>
